# aasset

./: CMakeLists.txt
src/: aasset.c  aasset.h
